--- a/pruebajulian.html
+++ b/pruebajulian.html
@@ -3,3 +3,17 @@
 <p>Esto es una prueba de ramas</p>
 
 <p>Hola soy Franco</p>
+<h1>Etiqueda agregada desde vim</h1>
+<p>Esto es una prueba de ramas</p>
+
+
+<p>Esto es una prueba de ramas</p>
+
+<h2>Titulo LucasQ</h2>
+
+<p>Andres modificando...</p>
+<p>german-tano</p>
+
+
+<p> Jeronimo-Alvarez</p> 
+
